--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Hello world</h1>
+    <h2>Text</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab obcaecati quae esse iste. Ullam maiores eaque quos est placeat possimus exercitationem nesciunt cupiditate, ut ratione pariatur dolore doloremque labore numquam.</p>
 </body>
 </html>
